manifests/busybox.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
spec:
  containers:
    - command:
        - sleep
        - "3600"
      image: busybox
      imagePullPolicy: IfNotPresent
      name: busybox
  restartPolicy: Always
