manifests/dnsutils.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dnsutils
spec:
  containers:
    - command:
        - sleep
        - "3600"
      image: k8s.gcr.io/e2e-test-images/jessie-dnsutils:1.3
      imagePullPolicy: IfNotPresent
      name: dnsutils
  restartPolicy: Always
